--- a/pages/adultosmayores.html
+++ b/pages/adultosmayores.html
@@ -22,6 +22,7 @@
             <button type="submit">Comprar</button>
         </form>
     </div>
+    <script src="../js/script.js" defer></script>
     <script>
         document.getElementById('purchaseForm').addEventListener('submit', function(event) {
             event.preventDefault();
