--- a/pages/trabajoencasa.html
+++ b/pages/trabajoencasa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plan de Ejercicios para Trabajadores de Computadora</title>
+    <title>Plan de Movilidad para Trabajadores de Computadora</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
             event.preventDefault();
             const duration = document.getElementById('duration').value;
             // Redirigir al carrito de compras
-            window.location.href = `carrito.html?plan=computadora&duration=${duration}`;
+            window.location.href = `carrito.html?plan=movilidad&duration=${duration}`;
         });
     </script>
 </body>
