--- a/pages/deportistas.html
+++ b/pages/deportistas.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plan de Ejercicios para Deportistas</title>
+    <title>Plan de Movilidad para Deportistas</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Plan de Ejercicios para Deportistas</h1>
-        <p>Ofrecemos un plan de ejercicios diseñado para deportistas que buscan mejorar su rendimiento.</p>
+        <h1>Plan de Movilidad para Deportistas</h1>
+        <p>Recomendamos un plan de ejercicios de movilidad diseñado especialmente para mejorar el rendimiento deportivo.</p>
         <p>Precio: $19.99/mes</p>
         <p>Promoción: Paga 2 meses y obtén 1 mes gratis.</p>
         
@@ -28,7 +28,7 @@
             event.preventDefault();
             const duration = document.getElementById('duration').value;
             // Redirigir al carrito de compras
-            window.location.href = `carrito.html?plan=deportista&duration=${duration}`;
+            window.location.href = `carrito.html?plan=movilidad&duration=${duration}`;
         });
     </script>
 </body>
